--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -45,6 +45,8 @@
   {{ end }}
   {{- template "_internal/twitter_cards.html" . }}
   {{ partial "seo_schema.html" . }}
+  <!-- Google AdsSense  -->
+  <script data-ad-client="ca-pub-9685127239866218" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- Hotjar Tracking Code for www.zisarknar.com -->
   <script>
